# visual-lox

./: .gitignore  LICENSE  README.md  buildsolution.bat  imgui_node_editor.cpp  imgui_node_editor.h  imgui_node_editor_internal.h
examples/: CMakeLists.txt
examples/application/: CMakeLists.txt
examples/application/include/: application.h
examples/application/source/: application.cpp  imgui_impl_glfw.cpp  imgui_impl_win32.cpp  platform.h  platform_glfw.cpp  platform_win32.cpp
examples/blueprints-example/: CMakeLists.txt  blueprints-example.cpp  editor.cpp  editor.h  editorActions.cpp  editorActions.h
examples/blueprints-example/cli/: main.cpp
examples/blueprints-example/graphs/: graph.cpp  graph.h  graphCompiler.cpp  graphCompiler.h  graphView.cpp  graphView.h  idgeneration.h  link.h  node.cpp  node.h  nodeRegistry.cpp  nodeRegistry.h
examples/blueprints-example/native/nodes/: append.h  begin.h  branch.h  expressions.h  for-in.h  function.h  list.h  match.h  math.h  object.h  print.h  range.h  repeat.cpp  repeat.h  return.h  variable.h  while.h
examples/blueprints-example/operations/: documentOperations.cpp  documentOperations.h
examples/blueprints-example/runtime/: constantFolder.cpp  constantFolder.h  scriptRuntime.cpp  scriptRuntime.h  standardLibrary.cpp  standardLibrary.h  standardLibraryFunctions.cpp  standardLibraryFunctions.h
examples/blueprints-example/script/: class.h  function.h  property.h  script.cpp  script.h  scriptElement.h  scriptSerializer.cpp  scriptSerializer.h  scriptSerializerTest.cpp  scriptSerializerTest.h
examples/blueprints-example/shared/: functionShared.cpp  functionShared.h
examples/blueprints-example/tests/: documentOperationsTests.cpp  documentOperationsTests.h  main.cpp  runtimeTests.cpp  runtimeTests.h  testFramework.h
examples/blueprints-example/tests/data/: arguments.vlox  hello.vlox
examples/blueprints-example/utilities/: builders.cpp  builders.h  treeview.cpp  treeview.h  utils.cpp  utils.h
examples/blueprints-example/validation/: scriptValidator.cpp  scriptValidator.h
examples/lox/: CMakeLists.txt  Chunk.cpp  Chunk.h  Common.h  Compiler.cpp  Compiler.h  Debug.cpp  Debug.h  HashTable.cpp  HashTable.h  Memory.h  Natives.cpp  Natives.h  Object.cpp  Object.h  Scanner.cpp  Scanner.h  VMUtils.h  Value.cpp  Value.h  Vm.cpp  Vm.h
